common interface for jits